# pipeline-optimizer

./: LICENSE  README.md  omni_pipe.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
pipeline_optimizer/: __init__.py  transformers.py
tests/: test_transformer.py
