[tool.poetry]
name = "pipeline-optimizer"
version = "0.1.4"
description = "Pipeline Optimizer is a Python library that aims to simplify and automate the machine learning pipeline, from preprocessing and testing to deployment. By providing a reusable infrastructure, the library allows you to manage custom preprocessing functions and reuse them effortlessly during the deployment of your project. This is particularly useful when dealing with a large number of custom functions."
authors = ["Stanislav Kharchenko"]
license = "MIT"
readme = "README.md"
packages = [{include = "pipeline_optimizer"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.0"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
